--- a/src/style.css
+++ b/src/style.css
@@ -53,8 +53,13 @@ body{
     justify-content: flex-start;
 }
 .Item__title{
-    width: 100%;
+    display: inline-block;
+    white-space: nowrap;
     padding: 20px 10px;
+}
+.Item__counter{
+    width: 100%;
+    padding: 20px 0px;
 }
 .Item__actions{
     padding: 20px  20px 20px 10px;
